# explore

./: .gitignore  README.en.md  README.md  docker.sh
bazel/cpp-explore/composition/: bazel-bin  bazel-composition  bazel-out  bazel-testlogs
bazel/cpp-explore/composition/app/: BUILD.bazel  app.cpp  hello.cpp  hello.hpp
bazel/cpp-explore/composition/time/: BUILD.bazel  hello_time.cpp  hello_time.hpp
bazel/cpp-explore/multi/: bazel-bin  bazel-multi  bazel-out  bazel-testlogs
bazel/cpp-explore/multi/hello/: BUILD.bazel  hello.cpp  hello.hpp  main.cpp
bazel/cpp-explore/solo/: bazel-bin  bazel-out  bazel-solo  bazel-testlogs
bazel/cpp-explore/solo/hello/: BUILD.bazel  hello.cpp
cpp/concurrency/: CMakeLists.txt  thread_count.cpp
cpp/dynamic_lib/: interface_example.cpp  interface_example.hpp  pa.cpp  pb.cpp
cpp/message_queue/: interface.h
cpp/object_file/: CMakeLists.txt  obj.cpp  version.h
docker/: docker.sh  pytorch.md
latex/: sample.tex
neural-network/pytorch/base/: type.ipynb  type.py
neural-network/pytorch/mnist/: main.py  utils.py
script/: build_concurrency.sh  build_dynamic_lib.sh  build_load_exe.sh  build_obj.sh
src/dynamic_lib/: CMakeLists.txt
src/load_exe/: CMakeLists.txt  elf.cpp
src/object_file/: obj.c  version.c
